<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewPagerItem2"
    android:background="#228BD6">


    <TextView
        android:id="@+id/package_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="Просто 20"
        android:textColor="#FFD12D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:enabled="false"
        android:id="@+id/call_time_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        app:backgroundTint="#FFD12D"
        app:layout_constraintBottom_toBottomOf="@+id/internet_mb_image"
        app:layout_constraintEnd_toStartOf="@+id/internet_mb_image"
        app:layout_constraintTop_toTopOf="@+id/internet_mb_image"
        app:srcCompat="@drawable/phone_icon"
        app:tint="#228BD6"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:enabled="false"
        android:id="@+id/internet_mb_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:backgroundTint="#FFD12D"
        app:layout_constraintEnd_toEndOf="@+id/package_names"
        app:layout_constraintStart_toStartOf="@+id/package_names"
        app:layout_constraintTop_toBottomOf="@+id/package_names"
        app:srcCompat="@drawable/internet"
        app:tint="#228BD6"
        android:contentDescription="@string/todo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:enabled="false"
        android:id="@+id/sms_package_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:backgroundTint="#FFD12D"
        app:layout_constraintBottom_toBottomOf="@+id/internet_mb_image"
        app:layout_constraintStart_toEndOf="@+id/internet_mb_image"
        app:layout_constraintTop_toTopOf="@+id/internet_mb_image"
        app:srcCompat="@drawable/sms_ikon"
        app:tint="#228BD6"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/package_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_10_min"
        android:textColor="#FFD12D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/call_time_image"
        app:layout_constraintStart_toStartOf="@+id/call_time_image"
        app:layout_constraintTop_toBottomOf="@+id/call_time_image" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_10_mb"
        android:textColor="#FFD12D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/internet_mb_image"
        app:layout_constraintStart_toStartOf="@+id/internet_mb_image"
        app:layout_constraintTop_toBottomOf="@+id/internet_mb_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_10_sms"
        android:textColor="#FFD12D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sms_package_image"
        app:layout_constraintStart_toStartOf="@+id/sms_package_image"
        app:layout_constraintTop_toBottomOf="@+id/sms_package_image" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/_10_000"
        android:textColor="#68D2FF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>