<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01B4FF"
    tools:context=".fragments.BalansFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            app:tint="@color/white"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/fragmentadapter_backgrround"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <Button
        android:id="@+id/uzbek_language"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="#01B4FF"
        android:text="@string/o_zbek"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/russsian_language"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#01B4FF"
        android:text="@string/Русский"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/uzbek_language"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/uzbek_language"
        app:layout_constraintTop_toBottomOf="@+id/uzbek_language" />

    <Button
        android:id="@+id/krill_language"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#01B4FF"
        android:text="@string/English"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/russsian_language"
        app:layout_constraintStart_toStartOf="@+id/russsian_language"
        app:layout_constraintTop_toBottomOf="@+id/russsian_language" />

</androidx.constraintlayout.widget.ConstraintLayout>
